<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tin.rfidreaderuhf.Reader">
    <item
        android:id="@+id/menu_read"
        android:orderInCategory="100"
        android:title="@string/menu_read_card"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_save"
        android:title="@string/menu_save_card"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
