<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.tin.rfidreaderuhf.Reader">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:stretchColumns="*"
        android:minWidth="25px"
        android:minHeight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <TableRow
            android:textAlignment="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <TextView
                android:textSize="@dimen/colTextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colHeaderStt"
                android:layout_column="1"
                android:textStyle="bold"/>
            <TextView
                android:textSize="@dimen/colTextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colHeaderName"
                android:layout_column="2"
                android:textStyle="bold"/>
            <TextView
                android:textSize="@dimen/colTextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colHeaderType"
                android:layout_column="3"
                android:textStyle="bold"/>
            <TextView
                android:textSize="@dimen/colTextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colHeaderAmount"
                android:layout_column="4"
                android:textStyle="bold"/>
            <TextView
                android:textSize="@dimen/colTextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colHeaderPrice"
                android:layout_column="5"
                android:textStyle="bold"/>
        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/lvRfid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        />

</LinearLayout>
